[project]
name = "library-reservation-system"
version = "1.0.0"
description = "Library Book Reservation System using AWS Strands + Bedrock + DynamoDB"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
# Only needed for `python deployment/agentcore_deploy.py`, not for local
# testing with main.py.
deploy = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]
# Only needed to run the automated test suite in tests/ (mocks DynamoDB
# with moto — no AWS account or credentials required).
dev = [
    "pytest>=8.0.0",
    "moto[dynamodb]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools"]
